--- a/activemq-client/pom.xml
+++ b/activemq-client/pom.xml
@@ -29,8 +29,10 @@
   <packaging>bundle</packaging>
   <name>ActiveMQ :: Client</name>
   <description>The ActiveMQ Client implementation</description>
+  <version>${revision}</version>
 
   <properties>
+    <revision>${activemq-client.tesb.version}</revision>
     <surefire.argLine>-Xmx512M</surefire.argLine>
     <activemq.osgi.import.pkg>
       !com.google.errorprone.annotations,
