--- a/activemq-cf/pom.xml
+++ b/activemq-cf/pom.xml
@@ -46,6 +46,7 @@
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-client</artifactId>
+			<version>${activemq-client.tesb.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
@@ -65,7 +66,7 @@
                     		!*
                     	</Export-Package>
                         <Private-Package>
-							org.apache.activemq.osgi.cf                        	
+							org.apache.activemq.osgi.cf
                         </Private-Package>
                     </instructions>
                 </configuration>
